--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.7'
 services:
   mongodb:
     image: mongo:latest
+    ports:
+      - 27017:27017
     volumes:
       - mongodb_data:/data/db
 
