--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,3 @@
-# Publish docker containers to github registry
 name: Publish
 
 on:
@@ -11,18 +10,21 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        component: [ingress, geoip-api, frontend]
+
     steps:
-      # Get the repository's code
       - name: Checkout
         uses: actions/checkout@v4
-      # https://github.com/docker/setup-qemu-action
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      # https://github.com/docker/setup-buildx-action
+
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
-      
+
       - name: Login to GHCR
         uses: docker/login-action@v1
         with:
@@ -30,23 +32,12 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build angler_frontend
+      - name: Build and push angler_${{ matrix.component }}
         uses: docker/build-push-action@v2
         with:
-          context: ./angler_frontend
-          platforms: linux/amd64,linux/arm64
-          push: true
-          # github.event.release.tag_name
-          tags: |
-            ghcr.io/konstfish/angler_frontend:${{ github.sha }}
-            ghcr.io/konstfish/angler_frontend:latest
-
-      - name: Build angler_ingress
-        uses: docker/build-push-action@v2
-        with:
-          context: ./angler_ingress
+          context: ./${{ matrix.component }}
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/konstfish/angler_ingress:${{ github.sha }}
-            ghcr.io/konstfish/angler_ingress:latest
+            ghcr.io/konstfish/angler_${{ matrix.component }}:${{ github.sha }}
+            ghcr.io/konstfish/angler_${{ matrix.component }}:latest
