--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Check for changes
+        id: check-changes
+        run: |
+          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q '^${{ matrix.component }}/'; then
+            echo "::set-output name=changed::true"
+          else
+            echo "::set-output name=changed::false"
+          fi
+
       - uses: docker-practice/actions-setup-docker@master
+        if: steps.check-changes.outputs.changed == 'true'
 
       - name: Build
+        if: steps.check-changes.outputs.changed == 'true'
         run: |
           cd ${{ matrix.component }}
           docker build -t angler_${{ matrix.component }} .
