--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       - '*'
 
 jobs:
-  frontend:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -20,9 +20,9 @@ jobs:
         id: check-changes
         run: |
           if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q '^${{ matrix.component }}/'; then
-            echo "::set-output name=changed::true"
+            echo "{changed}={true}" >> $GITHUB_OUTPUT
           else
-            echo "::set-output name=changed::false"
+            echo "{changed}={false}" >> $GITHUB_OUTPUT
           fi
 
       - uses: docker-practice/actions-setup-docker@master
@@ -33,4 +33,3 @@ jobs:
         run: |
           cd ${{ matrix.component }}
           docker build -t angler_${{ matrix.component }} .
-          
