feat(geoip-api): Implement github.com/oschwald/geoip2-golang

--- a/geoip-api/Dockerfile
+++ b/geoip-api/Dockerfile
@@ -11,12 +11,13 @@ RUN CGO_ENABLED=0 GOOS=linux go build -v -o main main/main.go
 
 FROM alpine:latest
 
-RUN apk --no-cache add ca-certificates
+RUN apk --no-cache add ca-certificates wget curl
 
 WORKDIR /
 
 RUN mkdir -p db
 
 COPY --from=builder /app/main .
+COPY container-init.sh .
 
-CMD ["./main"]
+CMD ["./container-init.sh"]
