--- a/geoip-api/.env.example
+++ b/geoip-api/.env.example
@@ -1,2 +1,2 @@
 MONGODB_URI='connection string' # mongodb://localhost:27017/angler
-RABBITMQ_URI='connection string' # amqp://guest:guest@localhost:5672
+REDIS_URI='connection string' # redis://localhost:6379/0
