--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Check for changes
         id: check-changes
         run: |
-          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q '^${{ matrix.component }}/'; then
+          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q ${{ matrix.component }}; then
             echo "{changed}={true}" >> $GITHUB_OUTPUT
           else
             echo "{changed}={false}" >> $GITHUB_OUTPUT
