--- a/ingress/Dockerfile
+++ b/ingress/Dockerfile
@@ -2,12 +2,18 @@ FROM golang:1.21-alpine as builder
 
 WORKDIR /app
 
-COPY go.mod go.sum ./
+COPY ingress/go.mod ingress/go.sum ./
 RUN go mod download
 
-COPY . .
+COPY go.work .
+COPY ingress ingress
+COPY shared shared
 
-RUN CGO_ENABLED=0 GOOS=linux go build -v -o main main/main.go
+COPY geoip-api geoip-api
+COPY auth auth
+COPY backend backend
+
+RUN CGO_ENABLED=0 GOOS=linux go build -v -o main ingress/main/main.go
 
 FROM alpine:latest
 
