--- a/kubernetes/components/geoip.yml
+++ b/kubernetes/components/geoip.yml
@@ -4,7 +4,7 @@ metadata:
   name: geoip-api-deployment
   namespace: angler
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: geoip-api
@@ -28,3 +28,5 @@ spec:
               value: "mongodb+srv://angler-user:asdf1234asdfsmile@angler-mongo-svc.mongodb.svc.cluster.local/admin?replicaSet=angler-mongo&ssl=false"
             - name: REDIS_URI
               value: "redis://redis:6379/0"
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: "tempo.monitoring.svc.cluster.local:4318"
