--- a/kubernetes/components/ingress.yml
+++ b/kubernetes/components/ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ingress-depoyment
+  name: ingress-deployment
   namespace: angler
 spec:
   replicas: 1
