feat(otel): Fix redis trace propagation

--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -1,3 +1,5 @@
+# load_module modules/ngx_otel_module.so;
+
 worker_processes 1;
 
 events { worker_connections 512; }
@@ -17,6 +19,13 @@ http {
                       text/javascript
                       application/x-javascript
                       application/atom+xml;
+
+    #otel_service_name "angler-frontend";
+    #otel_trace on;
+
+    #otel_exporter {
+    #    endpoint $otel_exporter;
+    #}
 
     server {
         listen 3000;
