--- a/kubernetes/components/frontend.yml
+++ b/kubernetes/components/frontend.yml
@@ -19,6 +19,9 @@ spec:
         - name: frontend
           image: ghcr.io/konstfish/angler_frontend:latest
           imagePullPolicy: Always
+          env:
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: "tempo.monitoring.svc.cluster.local:4318"
           #livenessProbe:
           #  httpGet:
           #    path: /nginx_status
