--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,7 +17,10 @@ EXPOSE 3000
 FROM nginx:latest
 COPY --from=builder /opt/web/dist /usr/share/nginx/html
 
+RUN apt update && apt install -y curl
+
 RUN rm -v /etc/nginx/nginx.conf
-ADD nginx.conf /etc/nginx/
+ADD nginx/nginx.conf /etc/nginx/
+ADD nginx/templates/ /etc/nginx/templates/
 
 CMD ["nginx", "-g", "daemon off;"]
