--- a/kubernetes/components/kubernetes_ingress.yml
+++ b/kubernetes/components/kubernetes_ingress.yml
@@ -16,6 +16,13 @@ spec:
             name: angler-ingress
             port:
               number: 8084
+      - path: /api/backend
+        pathType: Prefix
+        backend:
+          service:
+            name: angler-backend
+            port:
+              number: 8085
       - path: /
         pathType: Prefix
         backend:
