feat(backend): Basic implementation & link to auth

--- a/kubernetes/components/backend.yml
+++ b/kubernetes/components/backend.yml
@@ -28,6 +28,8 @@ spec:
               value: "mongodb+srv://angler-user:asdf1234asdfsmile@angler-mongo-svc.mongodb.svc.cluster.local/admin?replicaSet=angler-mongo&ssl=false"
             - name: REDIS_URI
               value: "redis://redis:6379/0"
+            - name: AUTH_URL
+              value: "http://angler-auth:8086/api/auth/v1/verify"
             - name: OTEL_EXPORTER_OTLP_ENDPOINT
               value: "tempo.monitoring.svc.cluster.local:4318"
           ports:
