feat(ingress): Add domain existance check

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,4 @@ jobs:
       - name: Build
         if: ${{ steps.check-changes.outputs.changed == 'true' }}
         run: |
-          cd ${{ matrix.component }}
-          # docker build -t angler_${{ matrix.component }} . -f ${{ matrix.component }}/Dockerfile
-          docker build -t angler_${{ matrix.component }} .
+          docker build -t angler_${{ matrix.component }} -f helper/docker/Dockerfile.gowork --build-arg COMPONENT=${{ matrix.component }} .
