--- a/helper/docker/Dockerfile.gowork
+++ b/helper/docker/Dockerfile.gowork
@@ -9,7 +9,8 @@ RUN go mod download
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux go build -v -o main $COMPONENT/main/main.go
+ENV GOCACHE=/root/.cache/go-build
+RUN --mount=type=cache,target="/root/.cache/go-build" CGO_ENABLED=0 GOOS=linux go build -v -o main $COMPONENT/main/main.go
 
 FROM alpine:latest
 
